Adding comments on stylesheet

--- a/4Restaurants.css
+++ b/4Restaurants.css
@@ -1,4 +1,4 @@
-/********* 4 Restaurants's media queries *********/
+/********* 4 Restaurants's Desktop + media queries *********/
     section.menu-part{
         background-color: #f2f2f2;
     }
