--- a/Desktop.css
+++ b/Desktop.css
@@ -1,3 +1,4 @@
+/************* HOME PAGE ONLY ***************/
 /*********** loading animation **********************/
 .loader_bg{
     background: fixed;
