--- a/Desktop.css
+++ b/Desktop.css
@@ -424,7 +424,7 @@ a{
     margin: 0;
     color: #3D8D7A;
 }
-/*************** heart test ***********/
+/*************** heart test **************
 i.far.fa-heart{
     position: absolute;
     cursor: pointer;
@@ -457,6 +457,42 @@ i.far.fa-heart:hover ~ i.fas.fa-heart{
     100% { opacity: 1 ;}
 }
 /*********** test heart end **********/
+.fa-heart{
+    font-size: 23px;
+  }
+  .heart{
+    position:relative;
+    z-index:1;
+    color: black;
+    position: absolute;
+    right: 7%;
+    cursor: pointer;
+    
+  }
+  .heart-color{
+    position:absolute;
+    left:0;
+    top:0;
+    z-index:-1;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity:0;
+    transform: scale(0);
+    transition:.3s ease;
+  }
+  
+  .heart:hover .heart-color{
+    transform:scale(1);
+    opacity:1;
+  }
+  .heart:hover{
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 0px white;
+  }
+/********** heart animation end ***************/
 .place-footer{
     width: 1214px;
     margin-left: auto;
