--- a/Desktop.css
+++ b/Desktop.css
@@ -424,39 +424,7 @@ a{
     margin: 0;
     color: #3D8D7A;
 }
-/*************** heart test **************
-i.far.fa-heart{
-    position: absolute;
-    cursor: pointer;
-    font-size: 23px;
-    color: black;
-    margin: 2px;
-    right: 5%;
-}
-i.fas.fa-heart{
-    display: none;
-}
-i.far.fa-heart:hover ~ i.fas.fa-heart{
-    display: block;
-    cursor: pointer;
-    position: absolute;
-    background:-moz-linear-gradient(top, #9356dc 0%, #ff79da 100%); 
-    background: -webkit-linear-gradient(top, #9356dc 0%,#ff79da 100%); 
-    background: linear-gradient(to bottom, #9356dc 0%,#ff79da 100%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color:transparent;
-    animation: heart 1s ease-in-out;
-    right: 5%;
-    font-size: 19.5px;
-    margin-top: 4px;
-    margin-right: 4px;
-}
-@keyframes heart {
-   0% { opacity: 0 ;}
-    100% { opacity: 1 ;}
-}
-/*********** test heart end **********/
+/*************** heart animation **************/
 .fa-heart{
     font-size: 23px;
   }
